<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/iv_login_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:scaleType="fitXY"
        android:src="@drawable/login_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_cr_number"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/gilroy_medium"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_header"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="@color/blue"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/gilroy_medium"
        android:selectAllOnFocus="false"
        android:linksClickable="false"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_header" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_your_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_mobile_number"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/gilroy_medium"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@+id/tv_cr"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_mobile"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_your_number"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/edit_text_border"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_height="@dimen/_48sdp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox"
        android:buttonTint="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_mobile" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_i_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_accept_all_the"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        android:layout_marginStart="@dimen/_4sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_32sdp"
        app:layout_constraintTop_toBottomOf="@+id/edt_mobile"
        app:layout_constraintStart_toEndOf="@+id/checkbox" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions"
        android:textColor="@color/blue"
        android:fontFamily="@font/montserrat_semi_bold"
        android:layout_marginStart="@dimen/_8sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_32sdp"
        app:layout_constraintTop_toBottomOf="@+id/edt_mobile"
        app:layout_constraintStart_toEndOf="@+id/tv_i_accept" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:text="@string/login"
        android:fontFamily="@font/gilroy_regular"
        app:cornerRadius="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_16sdp"
        android:backgroundTint="@color/blue"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_update_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_number"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        android:layout_marginStart="@dimen/_4sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version 1.5.0"
        android:textColor="@color/grey"
        android:fontFamily="@font/gilroy_regular"
        android:layout_marginStart="@dimen/_4sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>