<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        tools:context=".ui.VerifyOTPActivity">

        <ImageView
            android:id="@+id/iv_login_header"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_height="@dimen/_200sdp"
            android:scaleType="fitXY"
            android:src="@drawable/login_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RelativeLayout
            android:id="@+id/rr_otp_layout"
            android:layout_width="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_header"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_otp_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/otp_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_otp_txt"
                android:layout_margin="@dimen/_4sdp"
                android:fontFamily="@font/gilroy_medium"
                android:text="+ 91 9876543210"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rr_mobile_number_layout"
            android:layout_width="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rr_otp_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_did_not_receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/did_not_receive"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_edit_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_toEndOf="@+id/tv_did_not_receive"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/edit_mobile_number"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <com.ivan.letstalk.ui.helper.EditTextOtp
            android:id="@+id/otpBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/sp_20"
            app:layout_constraintTop_toBottomOf="@+id/rr_mobile_number_layout"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify_otp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:text="@string/verify_otp"
            app:layout_constraintTop_toBottomOf="@+id/otpBox"
            android:fontFamily="@font/gilroy_regular"
            app:cornerRadius="@dimen/_8sdp"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_32sdp"
            android:backgroundTint="@color/blue"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />


        <RelativeLayout
            android:id="@+id/rr_resend_otp_layout"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_verify_otp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_not_have_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/do_not_have_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_toEndOf="@+id/tv_not_have_otp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/resend_otp"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>
