<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            tools:context=".ui.MySideEffectHistory">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:background="@color/white"
                android:elevation="@dimen/_1sdp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/ll_header"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:orientation="horizontal">


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/btn_back"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:gravity="center"
                            android:src="@drawable/ic_back"
                            android:textAllCaps="false" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/gilroy_medium"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:text="@string/my_side_effect_history"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.appbar.MaterialToolbar>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_existing_side_effects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/existing_side_effects"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/gilroy_medium"
                android:selectAllOnFocus="false"
                android:linksClickable="false"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tb_header" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_preview_side_effects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/gilroy_medium"
                android:linksClickable="false"
                android:selectAllOnFocus="false"
                android:text="@string/previous_size_effects"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toEndOf="@+id/tv_existing_side_effects"
                app:layout_constraintTop_toBottomOf="@+id/tb_header" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>